--- a/.ci/build
+++ b/.ci/build
@@ -21,4 +21,4 @@ cd /go/src/github.com/gardener/component-cli
 make cross-build
 
 mkdir -p $ABS_OUT_PATH
-cp ./dist/*.gz "$OUT_PATH"
+cp ./dist/*.gz "$ABS_OUT_PATH"
