--- a/pkg/commands/componentarchive/sources/testdata/resources/01-multi-doc.yaml
+++ b/pkg/commands/componentarchive/sources/testdata/resources/01-multi-doc.yaml
@@ -7,7 +7,7 @@ access:
   repository: 'github.com/gardener/component-cli'
 ...
 ---
-name: 'baseRepo'
+name: 'base-repo'
 version: 'v18.4.0'
 type: 'git'
 access:
