--- a/pkg/commands/imagevector/testdata/01-component/component-descriptor.yaml
+++ b/pkg/commands/imagevector/testdata/01-component/component-descriptor.yaml
@@ -2,7 +2,7 @@ meta:
   schemaVersion: 'v2'
 
 component:
-  name: 'test/component'
+  name: 'example.com/component'
   version: 'v0.0.0'
 
   repositoryContexts:
