fix master -> main default branch

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,6 +1,6 @@
 cfgs:
     default:
-        branches: ['master']
+        branches: ['main']
         inherit:
             component-cli:
                 jobs:
