refactoring and docs added

--- a/pkg/transport/config/testdata/transport.cfg
+++ b/pkg/transport/config/testdata/transport.cfg
@@ -2,8 +2,8 @@ meta:
   version: v1
 
 processors:
-- name: 'my-filter'
-  type: 'OciImageFilter'
+- name: 'my-oci-filter'
+  type: 'OciArtifactFilter'
   spec:
     removePatterns:
     - 'bin/*'
@@ -42,7 +42,7 @@ uploaders:
 - name: 'oci-artifact-ul'
   type: 'OciArtifactUploader'
   spec:
-    baseUrl: 'o.ingress.js-ek.hubforplay.shoot.canary.k8s-hana.ondemand.com/js-transport-0'
+    baseUrl: 'my-target-registry.com/test'
     keepSourceRepo: false
   filters:
   - type: 'ResourceTypeFilter'
@@ -60,7 +60,7 @@ uploaders:
 rules:
 - name: 'generic-image-filtering'
   processors:
-  - name: 'my-filter'
+  - name: 'my-oci-filter'
     type: 'processor'
   filters:
   - type: 'ResourceTypeFilter'
