--- a/pkg/transport/config/testdata/transport.cfg
+++ b/pkg/transport/config/testdata/transport.cfg
@@ -33,7 +33,7 @@ downloaders:
 - name: 'local-oci-blob-dl'
   type: 'LocalOciBlobDownloader'
   filters:
-  - type: 'ResourceAccessTypeFilter'
+  - type: 'AccessTypeFilter'
     spec:
       includeAccessTypes:
       - 'localOciBlob'
@@ -52,7 +52,7 @@ uploaders:
 - name: 'local-oci-blob-ul'
   type: 'LocalOciBlobUploader'
   filters:
-  - type: 'ResourceAccessTypeFilter'
+  - type: 'AccessTypeFilter'
     spec:
       includeAccessTypes:
       - 'localOciBlob'
