--- a/pkg/transport/config/testdata/transport.cfg
+++ b/pkg/transport/config/testdata/transport.cfg
@@ -57,7 +57,7 @@ uploaders:
       includeAccessTypes:
       - 'localOciBlob'
 
-rules:
+processingRules:
 - name: 'generic-image-filtering'
   processors:
   - name: 'my-oci-filter'
